# CacheIR

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cacheir/: __init__.py  benchmark.py  cli.py  compiler.py  hardware.py  ir.py  quantization.py  visualize.py
cacheir/backends/: __init__.py  adapters.py  cuda_graphs.py  native.py  registry.py  triton_kernels.py  upstream.py  vllm_compat.py
cacheir/importers/: __init__.py  gguf.py  hf.py  onnx.py  stablehlo.py  tiny.py
cacheir/mlir/: __init__.py  dialect.py  upstream.py
cacheir/passes/: __init__.py  base.py  transformer.py
cacheir/runtime/: __init__.py  artifact.py  cpu.py  cuda.py  kv_cache.py  scheduler.py  server.py  tokenizer.py
cpp/: CMakeLists.txt
cpp/include/cacheir/: cacheir_backend.hpp
cpp/mlir/include/cacheir/mlir/: CacheIRDialect.h
cpp/mlir/src/: CacheIRDialect.cpp
cpp/src/: cacheir_backend.cpp  cacheir_cuda_kernels.cu  pybind_module.cpp
docs/: architecture.md  benchmark_performance_report.md  benchmarks.md  ir.md  roadmap.md  runtime.md
docs/latex/: cacheir_project_documentation.tex
examples/: compile_tiny.py
scripts/: benchmark_cuda_runtime.py  benchmark_cuda_scheduler.py  benchmark_gpu_kernels.py  benchmark_matrix.py  benchmark_scheduler.py  compare_external_benchmarks.py
tests/: test_advanced_experiments.py  test_compile.py  test_project_surfaces.py  test_runtime.py  test_scheduler.py
